# talks

./: .gitignore  Makefile  package-lock.json  package.json  talk-plan.v1.md  talk.v1.marp.html  talk.v2.marp.md
2025-12-edge-inference/: post.md
2025-12-iceberg/: talk.v1.marp.md
2025-12-iceberg/demo/: demo.ipynb  main.py  plan.md  pyproject.toml  tutorial.py
2025-12-iceberg/diagrams/: commit.mmd
2025-12-iceberg/talk/: package.json  talk-plan.v2.md  talk.v2.marp.html  talk.v2.marp.md
2025-12-iceberg/talk/diagrams/: anatomy-complex-1.mmd  anatomy-complex-2.mmd  anatomy-complex-3.mmd  anatomy-complex.mmd  anatomy.mmd
demo/: pyproject.toml
talk/: talk.v1.marp.html  talk.v1.marp.md
talk/diagrams/: anatomy.mmd  occ.mmd
