[project]
name = "iceberg-talk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastavro>=1.12.1",
    "ipykernel>=7.1.0",
    "marimo>=0.18.1",
    "pandas>=2.3.3",
    "pyiceberg[datafusion,sql-sqlite,pyiceberg-core]>=0.10.0",
]
